--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <option value="High">High</option>
         </select>
 
-        <button type="submit">Add</button>
+        <button id="addTodo" type="submit">Add</button>
       </form>
       
       <!-- Error message for empty todo input -->
