--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
 
       <!-- Color picker for background color -->
       <input type="color" id="colorPicker" />
+
+      <!-- Theme selector -->
+      <select id="themeSelector">
+        <option value="light">Light Theme</option>
+        <option value="dark">Dark Theme</option>
+      </select>
+
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
