--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
       <!-- Error message for empty todo input -->
       <p id="error-message" class="input-error" style="display: none;">Please enter a todo item</p>
 
+      <!-- Filter for priority -->
+      <label for="priority-filter">Filter by Priority:</label>
+      <select id="priority-filter">
+        <option value="">All</option>
+        <option value="Low">Low</option>
+        <option value="Medium">Medium</option>
+        <option value="High">High</option>
+      </select>
+      
+      <ul id="todo-list">
+        <!-- To-dos vil blive listet her -->
+      </ul>
+
       <ul class="todo-list" id="todo-list"></ul>
 
       <!-- Color picker for background color -->
