--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
       <!-- Theme selector -->
       <select id="themeSelector">
-        <option value="light">Light Theme</option>
-        <option value="dark">Dark Theme</option>
+        <option value="light">Light</option>
+        <option value="dark">Dark</option>
       </select>
 
       
