--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <p id="error-message" class="input-error" style="display: none;">Please enter a todo item</p>
 
       <!-- Filter for priority -->
-      <label for="prioritySelector">Filter by Priority:</label>
-      <select id="prioritySelector">
+      <label for="priority-filter">Filter by Priority:</label>
+      <select id="priority-filter">
         <option value="">All</option>
         <option value="Low">Low</option>
         <option value="Medium">Medium</option>
